--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/oxford_logo"
+        android:icon="@drawable/oxford_logo_png1"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/oxford_logo"
+        android:roundIcon="@drawable/oxford_logo_png1"
         android:supportsRtl="true"
         android:theme="@style/Theme.Translator"
         tools:targetApi="31">
