--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
     id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
-//    id 'kotlin-kapt'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -63,6 +64,14 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.2"
     ksp "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
+
+    // Hilt
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    // Allow references to generated code
+//    kapt {
+//        correctErrorTypes = true
+//    }
 
     // Support for Coroutines
 //    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
