--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,11 @@ dependencies {
     ksp "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
 
+    // Koin
+    implementation "io.insert-koin:koin-core:3.4.3"
+    implementation "io.insert-koin:koin-android:3.4.3"
+
+
     // Support for Coroutines
 //    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
