--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
-    id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
+    id 'com.google.devtools.ksp' version '1.8.20-1.0.11'
+//    id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
 //    id 'kotlin-kapt'
 }
 
@@ -61,6 +62,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:2.5.2"
+    implementation 'androidx.core:core-ktx:+'
     ksp "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
 
