--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
 #Sun Oct 02 12:18:05 EEST 2022
 distributionBase=GRADLE_USER_HOME
+#distributionUrl=https\://services.gradle.org/distributions/gradle-8.2.1-bin.zip
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-bin.zip
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
